@@ -12,6 +12,7 @@ Version 4.*.* - September 30, 2000, by Shigio Yamaguchi
 * htags: create bless.sh when the -S option specified.
 * htags: config variables show_position, position_begin, position_end and
   icase_path added.
+* gtags: the -i option also locate tag files among cadedite directories.
 
 Version 4.0.1 - September 26, 2000, by Shigio Yamaguchi
 
